--- a/curriculo.css
+++ b/curriculo.css
@@ -89,6 +89,4 @@ a{
     color: rgb(175, 68, 68);
 }
 a:hover{cursor: pointer;
-    color: white;}.perfil{
-    height:150px;
-    border-radius: 50px; }
+    color: rgb(8, 8, 8);}
